--- a/Web/Views/Account/ResetPassword.cshtml
+++ b/Web/Views/Account/ResetPassword.cshtml
@@ -11,6 +11,12 @@
                 <div class="bg-blue-600 text-white p-6 text-center">
                     <h4 class="text-2xl font-semibold">Reset Your Password</h4>
                 </div>
+                @if (ViewBag.ErrorMessage != null)
+                {
+                    <div class="alert alert-danger">
+                        @ViewBag.ErrorMessage
+                    </div>
+                }
                 <div class="p-6">
                     <p class="text-lg text-gray-600 text-center mb-6">
                         Enter your new password below. Make sure to use a strong password for better security.
