--- a/Web/Views/Product/Create.cshtml
+++ b/Web/Views/Product/Create.cshtml
@@ -98,7 +98,7 @@
                             <option value="">Không có quảng cáo nào</option>
                         }
                     </select>
-                 @*    <span asp-validation-for="advertisement_id" class="text-danger"></span> *@
+                    <span asp-validation-for="advertisement_id" class="text-danger"></span>
                 </div>
 
             </div>
@@ -124,6 +124,3 @@
         @ViewBag.Product
     </div>
 }
-<script>
-
-</script>
