--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿﻿@using Application.Entities
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<User> SignInManager
-
+@using System.Security.Claims
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,15 +30,24 @@
                     <div class="flex lg:justify-end items-center gap-x-4 ml-auto">
                         <!-- Search -->
                         <div class="relative">
-                            <input type="text" placeholder="Search" class="px-4 py-2 rounded-full border border-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-600 w-60 pr-10 text-left"> <!-- Thêm pr-10 để tạo khoảng cách cho biểu tượng -->
+                            <input type="text" placeholder="Search" class="px-4 py-2 rounded-full border border-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-600 w-60 pr-10 text-left"> 
                             <span class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-500 mt-2.5">
                                 <i class="fas fa-search"></i>
                             </span>
                         </div>
+                        @if (User.Identity.IsAuthenticated)
+                        {
                         <!-- Icon Shopping -->
-                        <a asp-controller="Cart" asp-action="GetAllById" class="text-gray-500 hover:text-gray-900">
+                        <a asp-controller="Cart" asp-action="GetAllById" asp-route-id="@Guid.Parse(User.FindFirstValue(ClaimTypes.NameIdentifier))" id="userIdInput" class="text-gray-500 hover:text-gray-900">
                             <i class="fas fa-shopping-cart"></i>
                         </a>
+                        }
+                        else
+                        {
+                            <a asp-action="Login" asp-controller="Account" class="text-gray-500 hover:text-gray-900">
+                                <i class="fas fa-shopping-cart"></i>
+                            </a>
+                        }
                     </div>
                     <button id="menu-toggle" type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700">
                         <span class="sr-only">Open main menu</span>
@@ -62,13 +71,21 @@
                                 <i class="fas fa-search"></i>
                             </span>
                         </div>
-
+                        @if (User.Identity.IsAuthenticated)
+                        {
                         <!-- Icon Shopping-->
                         <div class="flex justify-center items-center w-10 pl-8">
-                            <a href="#" class="text-gray-500 hover:text-gray-900">
+                            <a asp-controller ="Cart" asp-action="GetAllById" asp-route-id="@Guid.Parse(User.FindFirstValue(ClaimTypes.NameIdentifier))" id="userIdInput" class="text-gray-500 hover:text-gray-900">
                                 <i class="fas fa-shopping-cart"></i>
                             </a>
                         </div>
+                        }
+                        else
+                        {
+                            <a  asp-action="Login" asp-controller="Account" class="text-gray-500 hover:text-gray-900">
+                                <i class="fas fa-shopping-cart"></i>
+                            </a>
+                        }
                     </div>
                     @if (User.Identity.IsAuthenticated)
                     {
@@ -277,7 +294,7 @@
             </div>
         </aside>
     }
-    <main role="main" class="pb-3 w-full h-full">
+    <main role="main" class="pb-3 w-full h-full bg-gray-50">
         @RenderBody()
     </main>
     @if (!User.IsInRole("Admin"))
@@ -352,9 +369,10 @@
     }
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
-        <script src="~/js/Category.js"></script>
+    <script src="~/js/Category.js"></script>
     <script src="~/js/javascript.js"></script>
-    @*     <script src="~/js/Product.js"></script> *@
+    <script src="~/js/Home.js"></script>
+    <script src="~/js/Product.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
