--- a/Web/Views/Product/Create.cshtml
+++ b/Web/Views/Product/Create.cshtml
@@ -30,9 +30,10 @@
                     <label class="block mb-2 text-sm font-medium">Giảm giá (%)</label>
                     <input type="number"
                            min="0"
+                           max="100"
                            class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500"
                            asp-for="discount" />
-                    <span asp-validation-for="discount" class="text-danger"></span>
+                    <span asp-validation-for="discount" class="text-red-500 text-sm"></span>
                 </div>
 
                 <!-- Trạng thái sản phẩm -->
@@ -98,7 +99,7 @@
                             <option value="">Không có quảng cáo nào</option>
                         }
                     </select>
-                 @*    <span asp-validation-for="advertisement_id" class="text-danger"></span> *@
+                    <span asp-validation-for="advertisement_id" class="text-danger"></span>
                 </div>
 
             </div>
@@ -124,6 +125,3 @@
         @ViewBag.Product
     </div>
 }
-<script>
-
-</script>
